[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["std", "serde"] }
warp = "0.3.5"
serde_json = "1.0.107"
tokio-stream = "0.1.14"
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
futures = { version = "0.3.28", default-features = false }
tokio = { version = "1.32", features = ["macros", "sync", "rt-multi-thread"] }
argparse = "0.2.2"
env_logger = "0.10.0"
